--- a/loop.html
+++ b/loop.html
@@ -8,6 +8,8 @@
     <title>For-Loop-Exercise</title>
 </head>
 <body>
-<script src="js/for_loop.js"></script>
+<!--<script src="js/for_loop.js"></script>-->
+<!--<script src="js/break_and_continue.js"></script>-->
+<script src="js/while.js"></script>
 </body>
 </html>
