--- a/welcome.html
+++ b/welcome.html
@@ -5,62 +5,73 @@
     <title>"Hello, World"</title>
 </head>
 <body>
-    <h1><strong>Welcome to Veridian Dynamics</strong></h1>
-    <p>At Veridian Dynamics,<strong>we</strong> solve <em>your</em> problems with <strong><slant>technology.</slant></strong></p>
+    <header>
+        <h1><strong>Welcome to Veridian Dynamics</strong></h1>
+        <p>At Veridian Dynamics,<strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
+    </header>
     <hr>
-    <h2><strong>Core Values</strong></h2>
-        <ul>
-            <li>Competence</li>
-            <li>Involvement</li>
-            <li>Technology</li>
-        </ul>
-    <h2><strong>Our Process</strong></h2>
-        <ol>
-            <li>Plan</li>
-            <li>Evaluate</li>
-            <li>Implement</li>
-        </ol>
-    <h2><strong>2020 Vision</strong></h2>
-        <ul>
-            <li>Become #1 in Technology</li>
-            <li>Increase Success by 20%</li>
-            <li>Increase Business by 30%</li></ul>
+    <main>
+        <section>
+            <h2><strong>Core Values</strong></h2>
+                <ul>
+                    <li>Competence</li>
+                    <li>Involvement</li>
+                    <li>Technology</li>
+                </ul>
+            <h2><strong>Our Process</strong></h2>
+                <ol>
+                    <li>Plan</li>
+                    <li>Evaluate</li>
+                     <li>Implement</li>
+                </ol>
+            <h2><strong>2020 Vision</strong></h2>
+                <ul>
+                    <li>Become #1 in Technology</li>
+                    <li>Increase Success by 20%</li>
+                    <li>Increase Business by 30%</li>
+                </ul>
+        </section>
     <hr>
-    <h2><strong>Company Vision</strong></h2>
-    <img src="https://images.pexels.com/photos/7679440/pexels-photo-7679440.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2">
-    <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2">
-    <img src="https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2">
-    <img src="https://images.pexels.com/photos/1024248/pexels-photo-1024248.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2">
+        <section>
+            <h2><strong>Company Vision</strong></h2>
+                <img src="https://images.pexels.com/photos/7679440/pexels-photo-7679440.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2" alt="Computer Photo">
+                <img src="https://images.pexels.com/photos/3184418/pexels-photo-3184418.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2" alt="All Hands In Photo">
+                <img src="https://images.pexels.com/photos/3184292/pexels-photo-3184292.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2" alt="Working together photo">
+                <img src="https://images.pexels.com/photos/1024248/pexels-photo-1024248.jpeg?auto=compress&cs=tinysrgb&w=150&h=120&dpr=2" alt="Office Photo">
+        </section>
 
+        <section>
 
+            <h2><strong>Our Product</strong></h2>
+            <table>
+                <tr>
+                    <th>Plan</th>
+                    <th>Price</th>
+                    <th>Features</th>
+                </tr>
+                <tr>
+                    <td>Starter</td>
+                    <td>$99</td>
+                    <td>Base Technology</td>
 
-    <h2><strong>Our Product</strong></h2>
-    <table>
-        <tr>
-            <th>Plan</th>
-            <th>Price</th>
-            <th>Features</th>
-        </tr>
-        <tr>
-            <td>Starter</td>
-            <td>$99</td>
-            <td>Base Technology</td>
+                </tr>
+                <tr>
+                    <td>Advanced</td>
+                    <td>$199</td>
+                    <td>Additional Features</td>
+                </tr>
+                <tr>
+                    <td>Premium</td>
+                    <td>$499</td>
+                    <td>Unlimited Support</td>
+                </tr>
+            </table>
+        </section>
+        <section>
+            <p><em>All products come with our quality guarantee &#8482.</em></p>
 
-        </tr>
-        <tr>
-            <td>Advanced</td>
-            <td>$199</td>
-            <td>Additional Features</td>
-        </tr>
-        <tr>
-            <td>Premium</td>
-            <td>$499</td>
-            <td>Unlimited Support</td>
-        </tr>
-    </table>
-    <p><em>All products come with our quality guarantee &#8482.</em></p>
-
-<a href="#top">Top of the page</a>
-
+            <a href="#top">Go to the top of the page</a>
+        </section>
+    </main>
 </body>
 </html>
