Added # into my a tags

--- a/github.html
+++ b/github.html
@@ -8,97 +8,97 @@
     <title>GitHub Page</title>
 </head>
 <body>
-    <nav>
-        <img src="http://placeholder.pics/svg/30#">
-        <ul>
-            <li><a href="">Pull Request</a></li>
-            <li><a href="">Issues</a></li>
-            <li><a href="">Marketplace</a></li>
-            <li><a href="">Explore</a></li>
-        </ul>
-    </nav>
-
-<img src="http://placeholder.pics/svg/30#">
-<h3>Codeup</h3>
+<nav>
+    <img src="http://placeholder.pics/svg/30#" alt="Git Hub Logo">
     <ul>
-        <li><a href="">Repos </a>39</li>
-        <li><a href="">People </a>39</li>
-        <li><a href="">Teams </a>39</li>
-        <li><a href="">Projects </a>39</li>
-        <li><a href="">Settings </a>39</li>
+        <li><a href="#">Pull Request</a></li>
+        <li><a href="#">Issues</a></li>
+        <li><a href="#">Marketplace</a></li>
+        <li><a href="#">Explore</a></li>
     </ul>
+</nav>
+<header>
+    <img src="http://placeholder.pics/svg/30#" alt="Codeup Logo">
+    <h3>Codeup</h3>
+</header>
+<nav>
+    <ul>
+        <li><a href="#">People </a>39</li>
+        <li><a href="#">Teams </a>39</li>
+        <li><a href="#">Projects </a>39</li>
+        <li><a href="#">Settings </a>39</li>
+        <li><a href="#">Repos </a>39</li>
+    </ul>
+</nav>
+<table>
+    <tr>
+        <th>Codeup's dev team</th>
+    </tr>
+    <tr>
+        <td>
+            <img src="http://placeholder.pics/svg/48  #" alt="Employee Photo">
+            <a href="#">Kent Beck</a>
+        </td>
+    </tr>
+    <tr>
+        <td>Kent Beck</td>
+    </tr>
+    <tr>
+        <td>Member</td>
+    </tr>
+    <tr>
+        <td>X team members</td>
+    </tr>
+    </tr>
+    <tr>
+        <td>
+            <img src="http://placeholder.pics/svg/48  #" alt="EmployeePhoto">
+            <a href="#">Codeup Staff</a>
+        </td>
+    </tr>
+    <tr>
+        <td>CodeupStaff</td>
+    </tr>
+    <tr>
+        <td>Member</td>
+    </tr>
+    <tr>
+        <td>X team members</td>
+    </tr>
+    </tr>
+    <tr>
+        <td>
+            <img src="http://placeholder.pics/svg/48  #" alt="Employee photo">
+            <a href="#">Martin F</a>
+        </td>
+    </tr>
+    <tr>
+        <td>Martin F</td>
+    </tr>
+    <tr>
+        <td>Member</td>
+    </tr>
+    <tr>
+        <td>X team member</td>
+    </tr>
 
-    <table>
-        <tr>
-            <th>Codeup's dev team</th>
-        </tr>
-        <tr>
-            <td>
-                <img src="http://placeholder.pics/svg/48  #">
-                <a href="">Kent Beck</a>
-            </td>
-        </tr>
-        <tr>
-            <td>Kent Beck</td>
-        </tr>
-        <tr>
-            <td>Member</td>
-        </tr>
-        <tr>
-            <td>X Team Member</td>
-        </tr></tr>
-        <tr>
-            <td>
-                <img src="http://placeholder.pics/svg/48  #">
-                <a href="">Codeup Staff</a>
-            </td>
-        </tr>
-        <tr>
-            <td>CodeupStaff</td>
-        </tr>
-        <tr>
-            <td>Member</td>
-        </tr>
-        <tr>
-            <td>X Team Member</td>
-        </tr></tr>
-        <tr>
-            <td>
-                <img src="http://placeholder.pics/svg/48  #">
-                <a href="">Martin F</a>
-            </td>
-        </tr>
-        <tr>
-            <td>Martin F</td>
-        </tr>
-        <tr>
-            <td>Member</td>
-        </tr>
-        <tr>
-            <td>X Team Member</td>
-        </tr>
+</table>
 
-    </table>
+<footer>
+    <article>2018 &#169 Github. Inc</article>
 
-
-<article>2018 &#169 Github. Inc</article>
 
 <p>
-    <a href="">Terms</a>
-    <a href="">Privacy</a>
-    <a href="">Security</a>
-    <a href="">Status</a>
-    <a href="">Help</a>
-    <a href="">Contact</a>
-    <a href="">API</a>
-    <a href="">Training</a>
+    <a href="#">Privacy</a>
+    <a href="#">Security</a>
+    <a href="#">Status</a>
+    <a href="#">Help</a>
+    <a href="#">Contact</a>
+    <a href="#">API</a>
+    <a href="#">Training</a>
+    <a href="#">Terms</a>
 </p>
-
-
-
-
-
-
+</footer>
 
 </body>
 </html>
