--- a/forms.html
+++ b/forms.html
@@ -8,25 +8,24 @@
     <title>Register With Us</title>
 </head>
 <body>
-        <header>
-
-        <form method ="POST" action="https://request-inspector.glitch.me/">
-            <label for= "email">email</label>
-            <input id="email" name ="email" type="text">
+        <form method ="GET" action="https://request-inspector.glitch.me/">
+            <label for= "email">Email</label>
+            <input id="email" name ="email" type="text" placeholder="example@email.com">
             <br>
-            <label for ="password">password</label>
-            <input id="password" name="password" type="password">
+            <label for ="password">Password</label>
+            <input id="password" name="password" type="password" placeholder="Enter Password">
         <br>
         <section>
-            <label for ="bio"></label>
+            <label for ="bio">Bio</label>
             <br>
-            <textarea id="bio" name="bio" placeholder="Write a short description about yourself!"></textarea>
+            <textarea id="bio" name="bio" cols="30" row="10"  placeholder="Write a short description about yourself!"></textarea>
         </section>
         <br>
         <section>
-            <p>How did you hear about us?</p>
+            <label>How did you hear about us?</label>
+            <br>
             <label for="billboard">Billboard</label>
-            <input type="radio" id="billboard" name="billboard?" value="billboard" >
+            <input type="radio" id="billboard" name="billboard" value="billboard" >
         <br>
             <label for="radio">Radio advertisement</label>
             <input type="radio" id="radio" name="radio" value="radio" >
@@ -41,14 +40,15 @@
             <p>What kind of browser are you using?</p>
 
             <select name ="Browser">
-                <option value="Chrome">Google Chrome</option>
-                <option value="Firefox">Firefox </option>
-                <option value="Internet Explorer">Internet Explorer</option>
+                <option value="chrome">Google Chrome</option>
+                <option value="firefox">Firefox </option>
+                <option value="internet explorer">Internet Explorer</option>
+                <option value ="other">Other</option>
             </select>
 
         </section>
         <br>
-        <input type="Submit" value="Login">
+        <input type="Submit" value="Submit">
         </form>
     </header>
 </body>
