--- a/welcome.html
+++ b/welcome.html
@@ -3,15 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>"Hello, World"</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <span>
+    <header id="fancy-header">
         <h1><strong>Welcome to Veridian Dynamics</strong></h1>
         <p>At Veridian Dynamics,<strong>we</strong> solve <em>your</em> problems with <strong><em>technology.</em></strong></p>
     </header>
     <hr>
     <main>
-        <section>
+        <section id="list">
             <h2><strong>Core Values</strong></h2>
                 <ul>
                     <li>Competence</li>
@@ -42,7 +44,7 @@
 
         <section>
 
-            <h2><strong>Our Product</strong></h2>
+            <h2 id="table"><strong>Our Product</strong></h2>
             <table>
                 <tr>
                     <th>Plan</th>
@@ -68,10 +70,11 @@
             </table>
         </section>
         <section>
-            <p><em>All products come with our quality guarantee &#8482.</em></p>
+            <p id="qcheck"><em>All products come with our quality guarantee &#8482.</em></p>
 
-            <a href="#top">Go to the top of the page</a>
+            <a id="link" href="#top">Go to the top of the page</a>
         </section>
     </main>
+    </span>
 </body>
 </html>
