--- a/welcome.html
+++ b/welcome.html
@@ -14,19 +14,19 @@
     <hr>
     <main>
         <section id="list">
-            <h2><strong>Core Values</strong></h2>
+            <h2 class="points"><strong>Core Values</strong></h2>
                 <ul>
                     <li>Competence</li>
                     <li>Involvement</li>
                     <li>Technology</li>
                 </ul>
-            <h2><strong>Our Process</strong></h2>
+            <h2 class="points"><strong>Our Process</strong></h2>
                 <ol>
                     <li>Plan</li>
                     <li>Evaluate</li>
                      <li>Implement</li>
                 </ol>
-            <h2><strong>2020 Vision</strong></h2>
+            <h2 class="points"><strong>2020 Vision</strong></h2>
                 <ul>
                     <li>Become #1 in Technology</li>
                     <li>Increase Success by 20%</li>
