--- a/flexbox-nav-exercise.html
+++ b/flexbox-nav-exercise.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Flexbox-Nav</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.9.0/css/all.css">
     <link rel="stylesheet" href="css/flexbox-nav-exercise.css">
+    <script src="https://kit.fontawesome.com/a036573af0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -18,10 +18,9 @@
             <li class="nav li4"><a href="#">Jobs</a></li>
             <li id="logo"><a href="#">Logo</a></li>
             <li><a href="#">Follow Us</a></li>
+            <li><<i class="fa-solid fa-magnifying-glass"></i></li>
         </ul>
-        <ul>
-            <li><i class="fa-sharp fa-solid fa-magnifying-glass"></i></li>
-        </ul>
+
     </nav>
 </body>
 </html>
