Defuse the bomb

--- a/t-block-resume.html
+++ b/t-block-resume.html
@@ -11,13 +11,12 @@
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-12 d-flex justify-content-center" style="margin-top:3em;">
+        <div class="col-12 text-center" style="margin-top:3em;">
             <h1> CODY THE DUCK</h1>
-        </div>
-        <div class="col-12 d-flex justify-content-center">
+            <br>
             <h2> Software Developer</h2>
         </div>
-        <div class="col-12 d-flex justify-content-center" style="margin:auto 0">
+        <div class="col-12 text-center" style="margin:auto 0">
             <h6>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores cumque debitis delectus facere hic ipsam laudantium minima officia reiciendis vero! Consequatur cumque fugiat, inventore numquam ratione tempore tenetur. Magnam, omnis!</h6>
         </div>
 
@@ -39,7 +38,9 @@
         </div>
 
 
-        <hr>
+        <hr style="border: 3px solid chocolate">
+        <br>
+
         <div class="row col-md-4">
 
         <div class="col-10 "style="color:#0884e7" style="font-weight:bold" style="width:100%">
