--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -29,25 +29,43 @@
     (function() {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
-        // var mainHeader = ;
+        let mainHeader = document.getElementById("main-header");
+        console.log(mainHeader.innerHTML);
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-
+        mainHeader.innerHTML= "Javascript is Awesome"
+        console.log(mainHeader);
         // TODO: Uncomment the next line and get the sub header element by id
-        // var subHeader = ;
+        let subHeader = document.getElementById("sub-header");
 
         // TODO: Set the text color of subHeader to blue
-
+        subHeader.style.color = "blue";
         // TODO: Uncomment the next line and get all list items
-        // var listItems = ;
+        let listItems = document.getElementsByTagName("li");
+
+
+        console.log(listItems);
 
         // TODO: Set text color on every other list item to grey
+            for (let i = 0; i< listItems.length; i += 2){
+                listItems[i].style.color ="gray";
+            }
+
         // TODO: Set text color of li with dbid = 1 to blue
+            for( let i =0; i<listItems.length; i++){
+                let currentDbId = listItems[i].getAttribute("data-dbid");
+                if (currentDbId==='1'){
+                    listItems[i].style.color="blue";
+                }else if (currentDbId==="5"){
+                    listItems[i].style.color="orange";
+                }
+            }
 
         // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        // var subParagraphs = ;
+        let subParagraphs = document.getElementsByClassName("sub-paragraph") ;
 
         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+        subParagraphs[0].innerHTML="Mission Accomplished"
     })();
 </script>
 </body>
