--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -24,10 +24,10 @@
     pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum.
 </p>
-<button id="btn1">Click Me!</button>
-<button id="btn2">Click Me Too!</button>
-<button id="btn3">Click Me Also!</button>
-<button id="btn4">Click Me Also Too!</button>
+<button id="btn1" type="button">Click Me!</button>
+<button id="btn2" type="button">Click Me Too!</button>
+<button id="btn3" type="button">Click Me Also!</button>
+<button id="btn4" type="button">Click Me Also Too!</button>
 
 <script>
     "use strict";
