--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -6,12 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jquery-Intro</title>
+    <style>
+        .content{
+            color:blue;
+            height:30px;
+        }
+    </style>
 </head>
 <body>
 <h1 id="header">Lorem</h1>
     <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dolor ducimus minima neque nisi quasi vel veniam vitae! A aliquam aperiam consequatur corporis cum eaque est, inventore iusto odio voluptatum!</p>
 
-<ul id="list">
+<ul id="list" class="content">
     <li>Apples</li>
     <li>Oranges</li>
     <li>Banana</li>
