--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -64,20 +64,16 @@
 
 
 
-
-
+<button id ="toggleBtn">toggle data</button>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script>
-    let invis = $(".invisible");
-
-    invis.click(function(){
-        $(this).toggleClass('invisible')
+    $("#toggleBtn").click(function(){
+        $('dd').toggleClass('invisible')
     })
-    para.click(function (){
-        $(this).toggleClass('content');
-    })
-
+$('dt').click(function(){
+    $(this).css("background", "pink ")
+})
 </script>
 </body>
 </html>
