--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -14,20 +14,25 @@
     </style>
 </head>
 <body>
-<h1 id="header">Lorem</h1>
-    <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dolor ducimus minima neque nisi quasi vel veniam vitae! A aliquam aperiam consequatur corporis cum eaque est, inventore iusto odio voluptatum!</p>
+<!--<h1 id="header">Lorem</h1>-->
+<!--    <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa dolor ducimus minima neque nisi quasi vel veniam vitae! A aliquam aperiam consequatur corporis cum eaque est, inventore iusto odio voluptatum!</p>-->
 
-<ul id="list" class="content">
-    <li>Apples</li>
-    <li>Oranges</li>
-    <li>Banana</li>
-    <li>Kiwi</li>
-</ul>
+<!--<ul id="list" class="content">-->
+<!--    <li>Apples</li>-->
+<!--    <li>Oranges</li>-->
+<!--    <li>Banana</li>-->
+<!--    <li>Kiwi</li>-->
+<!--</ul>-->
 
 
 
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/jquery.js"></script>
+<script>
+    $('#national-parks-heading').next().css('background-color', 'salmon');
+
+
+</script>
 </body>
 </html>
