--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -63,7 +63,7 @@
                 .setLngLat(foodShop.location)
                 .addTo(map)
                 .setPopup(popup)
-        // popup.addTo(map)
+        popup.addTo(map)
     })
 </script>
 </body>
