--- a/weather_map.html
+++ b/weather_map.html
@@ -16,25 +16,60 @@
         }
         #map{
             width: 100%;
-            height: 500px
+            height: 400px;
+            margin-bottom: 20px;
+            border: 2px solid blue
         }
-        ul{
+        .card {
             display: inline-block;
-            padding: 10px;
-            margin: 10px ;
+            /*padding: 10px;*/
+            margin: 10px;
             list-style: none;
             text-align: center;
             border: 2px solid lightgray;
-            height: 250px;
-            width: 250px;
-
-
+            border-radius: 5px;
         }
+        .nav-style {
+            height:60px;
+            margin-bottom: 10px;
+        }
+        .navbar-brand{
+            font-size: 40px;
+            text-align: center;
+        }
+        .searchBar {
+            padding-left:20px;
+        }
+        #searchButton{
+            background-color:blue;
+            color:white;
+            margin-left: 10px;
+        }
+        .main{
+            background-color: lightgray;
+            padding:5px;
+        }
+
+
     </style>
 
 </head>
+<nav class="nav bar nav bar-expand-lg navbar-dark bg-primary nav-style">
+    <div class="container-fluid">
+        <a class="navbar-brand">Weather App</a>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="nav-item">
+                <li class="nav-item">
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-
+<div class="searchBar">
+    <input id="searchInput" type="search" placeholder="Enter a Location">
+    <button id="searchButton">Find</button>
+</div>
 <div id="weather" class="d-flex"></div>
 <div id="map"></div>
 
@@ -46,40 +81,91 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="js/mapbox-geocoder.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins.mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
+      type="text/css">
+
 <script>
-    let html = ''
-    $.get("http://api.openweathermap.org/data/2.5/forecast", {
-        APPID: OPEN_WEATHER_APPID,
-        q:     "Arlington, US",
-        units: "imperial"
-    }).done(function(data) {
-        for (let i = 0; i <=39; i+=8) {
+let html = '';
+let map;
+let marker;
 
-            data.list[i].dt_txt;
+$.get("http://api.openweathermap.org/data/2.5/forecast", {
+    APPID: OPEN_WEATHER_APPID,
+    q: "Arlington, US",
+    units: "imperial"
+}).done(function(data) {
+    for (let i = 0; i <= 39; i += 8) {
+        console.log(data.list[i]);
+        const date = new Date(data.list[i].dt_txt).toDateString();
+        console.log(date);
 
-            html += "<div className = 'card text-white bg-warning mb-3' style = 'max-width: 13rem'>"
-            html += "<div className = 'card-header'>" + "Date: " + data.list[i].dt_txt + "</div>"
-            html += "<div className = 'card-body'>"
-            html += "<p className='card-title'>" + "Description: " + data.list[i].weather[0].description + "</p>"
-            html += "<p className='card-title'>" + "Humidity: " + data.list[i].main.humidity + "</p>";
-            html += "<p className='card-title'>" + "Wind: " + data.list[i].wind.speed + "</p>";
-            html += "<p className='card-title'>" + "Pressure: " + data.list[i].main.pressure + "</p>"
-            html += "</div>"
-            html += "</div>"
-
-        }
-        $('#weather').html(html)
-    });
-
-
+        data.list[i].dt_txt;
+        html += "<div class= 'card' style = 'width: 18rem;'>";
+        html += "<h5 class='card-title main'>" + date + "</h5>";
+        html += "<p class= 'card-text'>" + data.list[i].main.temp_max + "&#8457;" + "/" + data.list[i].main.temp_min + "&#8457;" + "</p>";
+        html += "<img className = 'card-img-top' style='width 100% height:auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
+        html += "<div class = 'card-body'>";
+        html += "<p class='card-text'>" + "Description: " + data.list[i].weather[0].description + "</p>";
+        html += "<p class='card-title'>" + "Humidity: " + data.list[i].main.humidity + "</p>";
+        html += "<p class='card-title'>" + "Wind: " + data.list[i].wind.speed + "</p>";
+        html += "<p class='card-title'>" + "Pressure: " + data.list[i].main.pressure + "</p>";
+        html += "</div>";
+        html += "</div>";
+    }
+    $('#weather').html(html);
+});
 
 mapboxgl.accessToken = MAPBOX_TOKEN;
-let map = new mapboxgl.Map({
+map = new mapboxgl.Map({
     container: 'map',
-    style: 'mapbox://styles/mapbox/streets-v9',
+    style: 'mapbox://styles/mapbox/streets-v11',
     zoom: 13,
     center: [-97.11020235999891, 32.653778511410124]
-})
+});
+
+document.getElementById("searchButton").addEventListener("click", function() {
+    let location = document.getElementById("searchInput").value;
+//moves the map to user inputted location
+    geocode(location, MAPBOX_TOKEN).then(function(result) {
+        if (marker) {
+            marker.remove();
+        }
+        map.flyTo({ center: result });
+        marker = new mapboxgl.Marker()
+            .setLngLat(result)
+            .addTo(map);
+        // changes the cards based on location
+        $.get("http://api.openweathermap.org/data/2.5/forecast", {
+            APPID: OPEN_WEATHER_APPID,
+            lat: result[1],
+            lon: result[0],
+            units: "imperial"
+        }).done(function(data) {
+            html = '';
+            for (let i = 0; i <=39; i+=8) {
+                console.log(data.list[i]);
+                const date = new Date(data.list[i].dt_txt).toDateString();
+                console.log(date);
+
+                data.list[i].dt_txt;
+                html += "<div class= 'card' style = 'width: 18rem;'>";
+                html += "<h5 class='card-title'>" + date + "</h5>";
+                html += "<p class= 'card-text'>" + "High: " + data.list[i].main.temp_max + "<br>" + "Low: " + data.list[i].main.temp_min + "</p>";
+                html += "<img className = 'card-img-top' style='width 100% height:auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
+                html += "<div class = 'card-body'>";
+                html += "<p class='card-text'>" + "Description: " + data.list[i].weather[0].description + "</p>";
+                html += "<p class='card-title'>" + "Humidity: " + data.list[i].main.humidity + "</p>";
+                html += "<p class='card-title'>" + "Wind: " + data.list[i].wind.speed + "</p>";
+                html += "<p class='card-title'>" + "Pressure: " + data.list[i].main.pressure + "</p>";
+                html += "</div>";
+                html += "</div>";
+            }
+            $('#weather').html(html);
+        });
+    })});
+
 </script>
 
 </body>
