--- a/weather_map.html
+++ b/weather_map.html
@@ -11,23 +11,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
     <style>
+        body{
+            background-image: url("img/weather.jpeg");
+            font-family: Marion;
+        /*    marion*/
+        }
         *{
             box-sizing:border-box;
         }
         #map{
             width: 100%;
-            height: 400px;
-            margin-bottom: 20px;
-            border: 2px solid blue
+            height: 350px;
+            margin-top: 20px;
+            border: 2px solid lightblue;
         }
         .card {
             display: inline-block;
             /*padding: 10px;*/
             margin: 10px;
             list-style: none;
-            text-align: center;
-            border: 2px solid lightgray;
+            /*text-align: center;*/
+            border: 2px solid lightblue;
             border-radius: 5px;
+            background-color: lightskyblue;
+
         }
         .nav-style {
             height:60px;
@@ -35,31 +42,68 @@
         }
         .navbar-brand{
             font-size: 40px;
-            text-align: center;
+            display:flex;
+            justify-content: center;
+            color:white;
+            padding-top:10px;
         }
         .searchBar {
             padding-left:20px;
+            width: 300px;
+            height: 40px;
+            font-size: 15px;
+            text-align: center;
         }
         #searchButton{
-            background-color:blue;
-            color:white;
-            margin-left: 10px;
+            /*background-color:lightblue;*/
+            /*color:black;*/
+            /*margin-left: 10px;*/
+            /*border: 1px solid lightblue;*/
+            font-size: 20px;
+            color: white;
+            border: none;
+            background-color: transparent;
+            outline: none;
+            cursor: pointer;
         }
         .main{
-            background-color: lightgray;
+            background-color: white;
             padding:5px;
         }
+        .bold {
+            font-weight: bold;
+        }
+        .card-img-top{
+            height:60px;
+            width:60px;
+            display:flex;
+            justify-content: center;
 
+        }
+        .temp {
+            display:flex;
+            justify-content:center;
+        }
+
+        .nav-style{
+            background-color: lightblue;
+            background-image: url("img/weather.jpeg");
+        }
+        #searchInput{
+            height: 30px;
+            width: 200px;
+        }
 
     </style>
 
 </head>
-<nav class="nav bar nav bar-expand-lg navbar-dark bg-primary nav-style">
+<nav class="nav bar nav bar-expand-lg navbar-dark nav-style">
     <div class="container-fluid">
-        <a class="navbar-brand">Weather App</a>
+        <a class="navbar-brand">Hows The Weather Down There?</a>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="nav-item">
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Current City: <span id="current-city"></span></a>
                 </li>
             </ul>
         </div>
@@ -67,8 +111,8 @@
 </nav>
 
 <div class="searchBar">
-    <input id="searchInput" type="search" placeholder="Enter a Location">
-    <button id="searchButton">Find</button>
+    <input id="searchInput" type="search" placeholder="Down Wear?Enter a City">
+    <button id="searchButton">&#9825;&#9992;</button>
 </div>
 <div id="weather" class="d-flex"></div>
 <div id="map"></div>
@@ -81,16 +125,14 @@
 <script src="https://code.jquery.com/jquery-3.6.4.min.js" integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8=" crossorigin="anonymous"></script>
 <script src="js/mapbox-geocoder.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-<script src="https://api.mapbox.com/mapbox-gl-js/plugins.mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
-<link rel="stylesheet"
-      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css"
-      type="text/css">
+<script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.min.js"></script>
+<link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v5.0.0/mapbox-gl-geocoder.css" type="text/css">
 
 <script>
 let html = '';
 let map;
 let marker;
-
+//card function
 $.get("http://api.openweathermap.org/data/2.5/forecast", {
     APPID: OPEN_WEATHER_APPID,
     q: "Arlington, US",
@@ -103,14 +145,14 @@ $.get("http://api.openweathermap.org/data/2.5/forecast", {
 
         data.list[i].dt_txt;
         html += "<div class= 'card' style = 'width: 18rem;'>";
-        html += "<h5 class='card-title main'>" + date + "</h5>";
-        html += "<p class= 'card-text'>" + data.list[i].main.temp_max + "&#8457;" + "/" + data.list[i].main.temp_min + "&#8457;" + "</p>";
-        html += "<img className = 'card-img-top' style='width 100% height:auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
+        html += "<h5 class='card-title main temp'>" + date + "</h5>";
+        html += "<p class= 'card-text temp'>" + data.list[i].main.temp_max + "&#8457;" + "/" + data.list[i].main.temp_min + "&#8457;" + "</p>";
+        html += "<img class = 'card-img-top mx-auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
         html += "<div class = 'card-body'>";
-        html += "<p class='card-text'>" + "Description: " + data.list[i].weather[0].description + "</p>";
-        html += "<p class='card-title'>" + "Humidity: " + data.list[i].main.humidity + "</p>";
-        html += "<p class='card-title'>" + "Wind: " + data.list[i].wind.speed + "</p>";
-        html += "<p class='card-title'>" + "Pressure: " + data.list[i].main.pressure + "</p>";
+        html += "<p class='card-text'>" + "Description: "  + "<span class='bold'>" + data.list[i].weather[0].description + "</span>" + "</p>";
+        html += "<p class='card-title'>" + "🥵"+ "Humidity: "  + "<span class='bold'>" + data.list[i].main.humidity + "</span>" + "</p>";
+        html += "<p class='card-title'>" + "&#127811;" + "Wind: "  +"<span class='bold'>" + data.list[i].wind.speed + "</span>" + "</p>";
+        html += "<p class='card-title'>" + "🡃" +"Pressure: " + "<span class='bold'>" + data.list[i].main.pressure + "</span>" + "</p>";
         html += "</div>";
         html += "</div>";
     }
@@ -120,10 +162,20 @@ $.get("http://api.openweathermap.org/data/2.5/forecast", {
 mapboxgl.accessToken = MAPBOX_TOKEN;
 map = new mapboxgl.Map({
     container: 'map',
+    projection:'globe',
     style: 'mapbox://styles/mapbox/streets-v11',
-    zoom: 13,
+    zoom: 10,
     center: [-97.11020235999891, 32.653778511410124]
 });
+map.addControl(
+    new MapboxGeocoder({
+        accessToken: mapboxgl.accessToken,
+        mapboxgl: mapboxgl
+    })
+
+);
+
+
 
 document.getElementById("searchButton").addEventListener("click", function() {
     let location = document.getElementById("searchInput").value;
@@ -133,7 +185,9 @@ document.getElementById("searchButton").addEventListener("click", function() {
             marker.remove();
         }
         map.flyTo({ center: result });
-        marker = new mapboxgl.Marker()
+        marker = new mapboxgl.Marker({
+            draggable: true,
+        })
             .setLngLat(result)
             .addTo(map);
         // changes the cards based on location
@@ -150,15 +204,16 @@ document.getElementById("searchButton").addEventListener("click", function() {
                 console.log(date);
 
                 data.list[i].dt_txt;
+                data.list[i].dt_txt;
                 html += "<div class= 'card' style = 'width: 18rem;'>";
-                html += "<h5 class='card-title'>" + date + "</h5>";
-                html += "<p class= 'card-text'>" + "High: " + data.list[i].main.temp_max + "<br>" + "Low: " + data.list[i].main.temp_min + "</p>";
-                html += "<img className = 'card-img-top' style='width 100% height:auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
+                html += "<h5 class='card-title main temp'>" + date + "</h5>";
+                html += "<p class= 'card-text temp'>" + data.list[i].main.temp_max + "&#8457;" + "/" + data.list[i].main.temp_min + "&#8457;" + "</p>";
+                html += "<img class = 'card-img-top mx-auto' src= 'https://openweathermap.org/img/wn/" + data.list[i].weather[0].icon + ".png'>";
                 html += "<div class = 'card-body'>";
-                html += "<p class='card-text'>" + "Description: " + data.list[i].weather[0].description + "</p>";
-                html += "<p class='card-title'>" + "Humidity: " + data.list[i].main.humidity + "</p>";
-                html += "<p class='card-title'>" + "Wind: " + data.list[i].wind.speed + "</p>";
-                html += "<p class='card-title'>" + "Pressure: " + data.list[i].main.pressure + "</p>";
+                html += "<p class='card-text'>" + "Description: "  + "<span class='bold'>" + data.list[i].weather[0].description + "</span>" + "</p>";
+                html += "<p class='card-title'>" + "🥵"+ "Humidity: "  + "<span class='bold'>" + data.list[i].main.humidity + "</span>" + "</p>";
+                html += "<p class='card-title'>" + "&#127811;" + "Wind: "  +"<span class='bold'>" + data.list[i].wind.speed + "</span>" + "</p>";
+                html += "<p class='card-title'>" + "🡃" +"Pressure: " + "<span class='bold'>" + data.list[i].main.pressure + "</span>" + "</p>";
                 html += "</div>";
                 html += "</div>";
             }
